--- a/src/main/webapp/WEB-INF/html/shop/shopmanagement.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopmanagement.html
@@ -34,6 +34,28 @@
 					<a href="/o2oMaven/shopadmin/productcategorymanagement"
 						class="button button-big button-fill">商品类别管理</a>
 				</div>
+
+				<div class="col-50 mb">
+					<a href="/o2oMaven/shopadmin/awardmanagement"
+					   class="button button-big button-fill">奖品管理</a>
+				</div>
+
+				<div class="col-50 mb">
+					<a href="/o2oMaven/shopadmin/productbuycheck"
+					   class="button button-big button-fill">消费记录</a>
+				</div>
+				<div class="col-50 mb">
+					<a href="/o2oMaven/shopadmin/awarddelivercheck"
+					   class="button button-big button-fill">积分兑换</a>
+				</div>
+				<div class="col-50 mb">
+					<a href="/o2oMaven/shopadmin/usershopcheck"
+					   class="button button-big button-fill">顾客积分</a>
+				</div>
+				<div class="col-50 mb">
+					<a href="/o2oMaven/shopadmin/shopauthmanagement"
+					   class="button button-big button-fill">授权管理</a>
+				</div>
 				<div class="col-100 mb">
 					<a href="/o2oMaven/shopadmin/shoplist"
 						class="button button-big button-fill button-danger">返回</a>
