--- a/src/main/webapp/WEB-INF/html/shop/awarddelivercheck.html
+++ b/src/main/webapp/WEB-INF/html/shop/awarddelivercheck.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>奖品管理</title>
+<title>积分记录</title>
 <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 <link rel="shortcut icon" href="/favicon.ico">
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -12,31 +12,40 @@
 	href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
 <link rel="stylesheet"
 	href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
-<link rel="stylesheet" href="../resources/css/shop/awardmanagement.css">
+<link rel="stylesheet"
+	href="../resources/css/shop/awarddelivercheck.css">
 </head>
 <body>
 	<header class="bar bar-nav">
-		<h1 class="title">奖品管理</h1>
+		<h1 class="title">积分记录</h1>
 	</header>
+	<div class="bar bar-header-secondary">
+		<div class="searchbar">
+			<a class="searchbar-cancel">取消</a>
+			<div class="search-input">
+				<label class="icon icon-search" for="search"></label> <input
+					type="search" id='search' placeholder='输入关键字...' />
+			</div>
+		</div>
+	</div>
 	<div class="content">
 		<div class="content-block">
-			<div class="row row-award">
-				<div class="col-33">名称</div>
-				<div class="col-20">积分</div>
-				<div class="col-40">操作</div>
+			<div class="row row-awarddeliver">
+				<div class="col-10">奖品</div>
+				<div class="col-40">消费时间</div>
+				<div class="col-20">顾客</div>
+				<div class="col-10">积分</div>
+				<div class="col-20">操作员</div>
 			</div>
-			<div class="award-wrap">
+			<div class="awarddeliver-wrap">
+				<!-- 动态内容展示区 -->
 			</div>
 		</div>
 		<div class="content-block">
 			<div class="row">
-				<div class="col-50">
+				<div class="col-100">
 					<a href="/o2oMaven/shopadmin/shopmanagement"
 						class="button button-big button-fill button-danger">返回</a>
-				</div>
-				<div class="col-50">
-					<a href="#" class="button button-big button-fill button-success"
-						id="new">新增</a>
 				</div>
 			</div>
 		</div>
@@ -51,6 +60,8 @@
 	<script type='text/javascript'
 		src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../resources/js/shop/awardmanagement.js' charset='utf-8'></script>
+		src='../resources/js/common/common.js' charset='utf-8'></script>
+	<script type='text/javascript'
+		src='../resources/js/shop/awarddelivercheck.js' charset='utf-8'></script>
 </body>
 </html>
