--- a/src/main/webapp/WEB-INF/html/frontend/shopdetail.html
+++ b/src/main/webapp/WEB-INF/html/frontend/shopdetail.html
@@ -23,10 +23,10 @@
 					<span class="icon icon-left"></span> 返回
 				</a>
 				<h1 class="title" id="shop-name">店铺详情</h1>
-				<!-- 				<a class="button button-link button-nav pull-right" external
+				  <a class="button button-link button-nav pull-right" external
 					href="#" id="exchangelist" data-transition='slide-out'> 奖品兑换 <span
 					class="icon icon-right"></span>
-				</a> -->
+				 </a>
 			</header>
 			<nav class="bar bar-tab">
 				<a class="tab-item" href="/o2oMaven/frontend/index" external> <span
@@ -111,19 +111,19 @@
 		<div class="panel panel-right panel-reveal" id="panel-right-demo">
 			<div class="content-block">
 						<p>
-						<a href="/o2o/local/accountbind?usertype=1" class="close-panel">绑定帐号</a>
+						<a href="/o2oMaven/local/accountbind?usertype=1" class="close-panel">绑定帐号</a>
 					</p>
 					<p>
-						<a href="/o2o/local/changepsw?usertype=1" class="close-panel">修改密码</a>
+						<a href="/o2oMaven/local/changepsw?usertype=1" class="close-panel">修改密码</a>
 					</p>
 					<p>
-						<a href="/o2o/frontend/myrecord" class="close-panel">消费记录</a>
+						<a href="/o2oMaven/frontend/myrecord" class="close-panel">消费记录</a>
 					</p>
 					<p>
-						<a href="/o2o/frontend/mypoint" class="close-panel">我的积分</a>
+						<a href="/o2oMaven/frontend/mypoint" class="close-panel">我的积分</a>
 					</p>
 					<p>
-						<a href="/o2o/frontend/pointrecord" class="close-panel">兑换记录</a>
+						<a href="/o2oMaven/frontend/pointrecord" class="close-panel">兑换记录</a>
 					</p>
 					<p>
 						<a href="#" usertype="1" class="close-panel" id="log-out">登出系统</a>
